<resources>
    <string name="app_name">SMART AIR</string>
    <string name="login">Login</string>
    <string name="enter_email_or_username">Enter Email or Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="click_to_register">Click to register</string>
    <string name="parentf1">parentf1</string>
    <string name="add_child">Add child</string>
    <string name="manage_child">View Children</string>
    <string name="add_child_prompt">Create an account for your child</string>
    <string name="manage_child_prompt">Access your children\'s accounts</string>
    <string name="child_signup_username">Enter Username</string>
    <string name="domain">\@smartairchildaccount.com</string>
    <string name="back">Back</string>
    <string name="enter_dob">Enter Birth Date (optional)</string>
    <string name="enter_name">Enter Name (optional)</string>
    <string name="add_child_header">Creating an Account for your Child</string>
    <string name="select_child">Select child</string>
    <string name="change_child_settings">Enter new value</string>
    <string name="save">Save</string>
    <string name="click_to_edit">Click on an item to edit its value!</string>
    <string name="view_child_profile">View as child</string>
    <string name="generate_code">Generate code</string>
    <string name="regenerate_code">Regenerate code</string>
    <string name="revoke_code">Revoke code</string>
    <string name="share">Share with provider</string>
    <string name="welcome">Welcome to SMARTAIR!</string>
    <string name="swipe">You will now see an explanation of the app, swipe right on each page to continue!</string>
    <string name="not_child_purpose">SMART AIR is a child-friendly platform to help children (ages 6–16) understand asthma, practice good inhaler technique, log symptoms/medicine use, and share parent-approved information with healthcare providers via a concise, exportable report.</string>
    <string name="child_purpose">SMART AIR is an app to help you take your asthma medicine!</string>
    <string name="as_a_parent">As a parent, you can add and manage your children\'s accounts, view all of their medicine logs, symptoms, daily check ins, and more, share data that you choose with their providers, and receive alerts about any worrying situations related to your children.</string>
    <string name="our_purpose">Our Purpose:</string>
    <string name="what_you_see">What you see:</string>
    <string name="rescue_vs_controller">Rescue vs Controller Medicine:</string>
    <string name="rescue_controller_definition">Rescue inhaler: quick-relief medicine\n\nController medicine: daily medicine to make breathing easier</string>
    <string name="as_a_provider">As a provider, you can enter invite codes shared by parents to view reports of their children\'s data, containing only information that they have shared. By default, you won\'t see any data, and parents can toggle any data they want you to see. Parents can revoke this access at any time. A code is valid for 7 days, but once you enter a code, you will have access to the corresposnding report until parents revoke it. You can only read the data, you can\'t edit any of it.</string>
    <string name="parent_owns_child">Your parent owns your account. If you don\'t understand something, make sure to ask your parents!</string>
    <string name="shared_data">- rescue logs\n- controller adherence summary\n- symptoms\n- triggers\n- peak-flow (PEF)\n- triage incidents\n- summary charts (visuals representing the other data).</string>
    <string name="continue_to_dashboard">Continue to dashboard</string>
    <string name="invite_title">Provider Sharing Controls:</string>
    <string name="sharing_controls">You will be able to generate an invite code, and your provider will have 7 days to enter this code to gain access to the information that you toggle on. You can revoke provider access or regenerate this code at any time. By default, all data will be kept private, so that only you and your child will be able to view it.</string>
    <string name="managing_title">Managing Children Accounts:</string>
    <string name="child_controls">You can create an account for your child with a username and password at any time. You should set multiple settings for them, such as their PB and zone-based action plans. Additionally, on every day, you should set whether they should take a controller dose or not. All of these, and more optional settings such as name, age, thresholds to earn badges, and inventory levels, can be found by navigating to Manage Children -> View Children.</string>
    <string name="forgot_password">Forgot password? Click here</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="input">Input</string>
    <string name="log_medicine">Log Medicine</string>
    <string name="daily_check_in">Daily Check-in</string>
    <string name="which_medicine_are_you_taking">Which medicine are you taking?</string>
    <string name="rescue_medication">Rescue Medication</string>
    <string name="controller_medication">Controller Medication</string>
    <string name="next">Next</string>
    <string name="inventory">Inventory</string>
    <string name="technique_helper">Technique Helper</string>
    <string name="_1_seal_lips_around_mouthpiece">1. Seal your lips around the mouthpiece</string>
    <string name="_4_wait_30_60s_between_puffs">4. Wait 30-60s between puffs</string>
    <string name="_3_hold_breath_for_10_seconds">3. Hold your breath for 10 seconds</string>
    <string name="_2_take_slow_deep_breath">2. Take a slow, deep breath</string>
    <string name="better">Better</string>
    <string name="worse">Worse</string>
    <string name="short_breath_rating">Give a short breath rating</string>
    <string name="pre_check_before_dose">Pre-Check (Before Dose)</string>
    <string name="how_are_your_breathing_right_now">How is your breathing right now?</string>
    <string name="same">Same</string>
    <string name="play_video">Play Video</string>
    <string name="how_are_your_breathing_now">How is your breathing now?</string>
    <string name="how_many_puffs_log_dose">How many puffs did you take?</string>
    <string name="finish">Finish</string>
    <string name="_3_times">3+ times</string>
    <string name="no_waking">No waking</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="night_waking">Night Waking:</string>
    <string name="some_limits">Some limits</string>
    <string name="no_limits">No limits</string>
    <string name="none">None</string>
    <string name="moderate">Moderate</string>
    <string name="severe">Severe</string>
    <string name="mild">Mild</string>
    <string name="activity_limits">Activity Limits:</string>
    <string name="cough_wheeze">Cough/Wheeze:</string>
    <string name="many_limits">Many limits</string>
    <string name="_1_time">1 time</string>
    <string name="_2_times">2 times</string>
    <string name="perfumes">Perfumes</string>
    <string name="dust_pets">Dust/Pets</string>
    <string name="today_s_triggers">Today\'s Triggers:</string>
    <string name="exercise">Exercise</string>
    <string name="other_trigger_s">Other Trigger(s)</string>
    <string name="cold_air">Cold Air</string>
    <string name="illness">Illness</string>
    <string name="smoke">Smoke</string>
    <string name="edit_the_date">Edit The Date</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="update_inventory">Update Inventory</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="amount_left">Amount Left:</string>
    <string name="no_walking">no_walking</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_pef">Enter PEF</string>
    <string name="low_inventory">Inventory is low</string>
    <string name="enter_pef_below">Please enter your PEF below</string>
    <string name="optional_enter_pef_below">(OPTIONAL) Enter your PEF below</string>
    <string name="child_controls">You can create an account for your child with a username and password at any time. You can also configure many settings for them, such as their name, age, personal best peak-flow (PB), thresholds to earn badges, and action plans for when your child is in the green, orange, or red zone (% peak-flow (PEF) of PB). All they will see is their own data.</string>
    <string name="as_a_child">- videos to help you take your medicine\n\n- enter how you\'re feeling\n\n- what medicine you have taken\n\n- help if you have trouble breathing</string>
    <string name="things_shared_title">Things that a parent can choose to share with you:</string>
</resources>