<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daily_Checkin">


    <TextView
        android:id="@+id/Daily_Checkin_Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/how_was_your_day"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/night_Waking_1_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_time"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Night_Waking_No_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text2" />


    <CheckBox
        android:id="@+id/night_Waking_3_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_times"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/night_Waking_2_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/night_Waking_1_Checkbox" />

    <CheckBox
        android:id="@+id/Night_Waking_No_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_walking"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/night_Waking_1_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text2" />


    <TextView
        android:id="@+id/daily_Checkin_Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/night_waking"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Daily_Checkin_Text1" />

    <CheckBox
        android:id="@+id/activityLimits_Some_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_limits"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activityLimits_No_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text3" />

    <CheckBox
        android:id="@+id/activityLimits_No_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_limits"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/activityLimits_Some_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text3" />


    <CheckBox
        android:id="@+id/Cough_No_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/none"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cough_Mild_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text4" />


    <CheckBox
        android:id="@+id/cough_Moderate_Checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moderate"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cough_Severe_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Cough_No_Checkbox" />


    <CheckBox
        android:id="@+id/cough_Severe_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/severe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cough_Moderate_Checkbox2"
        app:layout_constraintTop_toBottomOf="@+id/cough_Mild_Checkbox" />


    <CheckBox
        android:id="@+id/cough_Mild_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mild"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Cough_No_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/daily_Checkin_Text4" />


    <TextView
        android:id="@+id/daily_Checkin_Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/activity_limits"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/night_Waking_2_Checkbox" />


    <TextView
        android:id="@+id/daily_Checkin_Text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/cough_wheeze"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLimits_Many_Checkbox" />

    <CheckBox
        android:id="@+id/activityLimits_Many_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/many_limits"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityLimits_No_Checkbox" />


    <Button
        android:id="@+id/Daily_Checkin_Next1_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/daily_Checkin_Back1_Button"
        app:layout_constraintTop_toBottomOf="@+id/cough_Severe_Checkbox" />

    <Button
        android:id="@+id/daily_Checkin_Back1_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Daily_Checkin_Next1_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cough_Moderate_Checkbox2" />

    <CheckBox
        android:id="@+id/night_Waking_2_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_times"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/night_Waking_3_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Night_Waking_No_Checkbox" />


</androidx.constraintlayout.widget.ConstraintLayout>