<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logging_PostCheck">


    <EditText
        android:id="@+id/Log_Number_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logging_Post_Check_Text1" />


    <TextView
        android:id="@+id/logging_Post_Check_Text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/how_are_your_breathing_now"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Log_Number_Input" />

    <CheckBox
        android:id="@+id/post_Check_Same_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/same"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/post_Check_Worse_Checkbox"
        app:layout_constraintStart_toEndOf="@id/Post_Check_Better_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/logging_Post_Check_Text3" />


    <CheckBox
        android:id="@+id/Post_Check_Better_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/better"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/post_Check_Same_Checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logging_Post_Check_Text3" />


    <TextView
        android:id="@+id/Logging_Post_Check_Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/how_many_puffs_log_dose"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/post_Check_Worse_Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/worse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/post_Check_Same_Checkbox"
        app:layout_constraintTop_toBottomOf="@+id/logging_Post_Check_Text3" />


    <EditText
        android:id="@+id/Post_Check_BreathRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/short_breath_rating"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_Check_Same_Checkbox" />

    <Button
        android:id="@+id/Logging_Post_Check_Finish_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logging_Post_Check_Back_Button"
        app:layout_constraintTop_toBottomOf="@+id/Post_Check_BreathRating" />


    <Button
        android:id="@+id/logging_Post_Check_Back_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Logging_Post_Check_Finish_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Post_Check_BreathRating" />


</androidx.constraintlayout.widget.ConstraintLayout>